@@ -9,6 +9,21 @@ import (
 	"context"
 )
 
+const assignAdmin = `-- name: AssignAdmin :exec
+INSERT INTO "AdminAssignments" (assigned_to, assigned_by, is_deactivation)
+VALUES ($1, $2, false)
+`
+
+type AssignAdminParams struct {
+	AssignedTo int64 `json:"assigned_to"`
+	AssignedBy int64 `json:"assigned_by"`
+}
+
+func (q *Queries) AssignAdmin(ctx context.Context, arg AssignAdminParams) error {
+	_, err := q.db.ExecContext(ctx, assignAdmin, arg.AssignedTo, arg.AssignedBy)
+	return err
+}
+
 const getAdminAssignment = `-- name: GetAdminAssignment :many
 Select id, assigned_to, assigned_by, assigned_at, is_deactivation from "AdminAssignments" where assigned_to = $1 ORDER BY assigned_at DESC
 `
