@@ -52,6 +52,12 @@ type UserControllerInterface interface {
 	// ToggleFeedbackHidden handles the request, only valid for an admin, to toggle whether a given feedback is hidden.
 	ToggleFeedbackHidden(comm *communication.ToggleFeedbackHidden, serv *Server)
 
+	// HandleCommandAssignGlobalModerator handles the request, only valid for an admin, to assign or remove a global moderator.
+	HandleCommandAssignGlobalModerator(comm *communication.AssignGlobalModerator, serv *Server)
+
+	// HandleCommandAssignAdmin handles the request, only valid for an admin, to grant admin privileges to another user.
+	HandleCommandAssignAdmin(comm *communication.AssignAdmin, serv *Server)
+
 	// GetUser returns the user associated with this controller
 	GetUser() *generated.User
 
